--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -18,3 +18,10 @@
     position: absolute;
     bottom: 0;
 }
+
+.table {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+}
