--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,18 +1,20 @@
 .background {
-    background-color: rgb(22, 2, 2);
+    margin: 0%;
     height: 100%;
     width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(24,171,120,1) 44%, rgba(0,212,255,1) 100%);
 }
 
 .menu {
-    background-color: inherit;
-    height: 20%;
     width: 100%;
     position: absolute;
 }
 
 .list {
-    background-color: inherit;
     height: 78%;
     width: 100%;
     position: absolute;
@@ -28,28 +30,40 @@
 
 table {
     table-layout: fixed;
-    width: 100%;
+    width: 900px;
+    border-collapse: collapse;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 #thead {
     display: block;
-    width: 100%;
+    width: 934px;
+    color: #ffffff;
+    
+}
+
+th {
+    background-color: #009879;
 }
 
 #tbody {
     display: block;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     height: 100%;
     max-height: 400px;
-    width: 101.8%;
+    width: 934px; /* added 0.25% is for the scroll bar */
+    text-align: left;
+    background-color: #f3f3f3;
+    font-size: 13px;
+    font-weight: 800;
 }
 
 .cell{
     overflow: hidden;
     text-overflow: ellipsis;
     display: table-cell;
-    width: 10%;
+    width: 90px;
     border: solid black 1px;
     text-align: center;
     height: 40px;
@@ -59,7 +73,7 @@ table {
     overflow: hidden;
     text-overflow: ellipsis;
     display: table-cell;
-    width: 30%;
+    width: 230px;
     border: solid black 1px;
     text-align: center;
     height: 40px;
@@ -69,9 +83,18 @@ table {
     overflow: hidden;
     text-overflow: ellipsis;
     display: table-cell;
-    width: 10%;
+    width: 140px;
     border: solid black 1px;
-    padding-right: 1px;
+    text-align: center;
+    height: 40px;
+}
+
+.platformCell { /* Was made because of the scroll bar */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: table-cell;
+    width: 73.5px;
+    border: solid black 1px;
     text-align: center;
     height: 40px;
 }
