--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -26,6 +26,7 @@
     top: 50%;
     left: 50%;
     transform: translate( -50%, -50%);
+    border: solid black 1px;
 }
 
 table {
@@ -52,7 +53,7 @@ th {
     overflow-x: hidden;
     height: 100%;
     max-height: 400px;
-    width: 934px; /* added 0.25% is for the scroll bar */
+    width: 934px; 
     text-align: left;
     background-color: #f3f3f3;
     font-size: 13px;
