--- a/frontend/src/css/SearchType.css
+++ b/frontend/src/css/SearchType.css
@@ -1,17 +1,17 @@
-.dropdown-check-list {
+#dropdown-type {
     display: inline-block;
-    width: 240px;
 }
-  
-.dropdown-check-list .anchor {
+
+#dropdown-type .anchor {
     position: relative;
     cursor: pointer;
     display: inline-block;
-    padding: 10px 62.5px 10px 62.5px;
+    padding: 10px 0 10px 0;
     border: 1px solid #ccc;
+    width: 240px;
 }
-  
-.dropdown-check-list .anchor:after {
+
+#dropdown-type .anchor:after {
     position: absolute;
     content: "";
     border-left: 2px solid black;
@@ -25,13 +25,13 @@
     -webkit-transform: rotate(-135deg);
     transform: rotate(-135deg);
 }
-  
-.dropdown-check-list .anchor:active:after {
+
+#dropdown-type .anchor:active:after {
     right: 8px;
     top: 21%;
 }
-  
-.dropdown-check-list ul.items {
+
+#dropdown-type ul.items {
     padding: 2px;
     display: none;
     margin: 0;
@@ -39,16 +39,18 @@
     border-top: none;
     background-color: #333;
 }
-  
-.dropdown-check-list ul.items li {
+
+#dropdown-type ul.items li {
     list-style: none;
     background-color: #333;
+    border-bottom: 1px solid #ccc;
+    padding: 5px 0 5px 0;
 }
-  
-.dropdown-check-list.visible .anchor {
+
+#dropdown-type.visible .anchor {
     color: #0094ff;
 }
-  
-.dropdown-check-list.visible .items {
+
+#dropdown-type.visible .items {
     display: block;
 }
