--- a/frontend/src/css/Searches.css
+++ b/frontend/src/css/Searches.css
@@ -1,12 +1,4 @@
-.input-height {
-    height: 34px;
-}
-
-.button {
+.search-button {
+    width: 80px;
     height: 40px;
-    width: 40px;
-}
-
-.specific-bar {
-    width: 160px;
 }
