--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -13,12 +13,7 @@
     width: 100%;
     height: 10%;
     position: absolute;
-}
-
-.list {
-    height: 90%;
-    width: 100%;
-    bottom: 0;
+    z-index: 1;
 }
 
 .table {
@@ -27,61 +22,4 @@
     left: 50%;
     transform: translate( -50%, -50%);
     border: solid black 1px;
-}
-
-table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    background-color: #009879;
-}
-
-#thead {
-    display: block;
-    width: 934px;
-    color: #ffffff;
-    
-}
-
-th {
-    border: solid black 1px;
-    background-color: #009879;
-}
-
-#tbody {
-    display: block;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 100%;
-    max-height: 400px;
-    width: 934px; 
-    text-align: left;
-    background-color: #f3f3f3;
-    font-size: 13px;
-    font-weight: 800;
-}
-
-td {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: table-cell;
-    border: solid black 1px;
-    text-align: center;
-    height: 40px;
-}
-
-.cell{
-    width: 90px;
-}
-
-.mailCell {
-    width: 230px;
-}
-
-.nameCell {
-    width: 120px;
-}
-
-.platformCell { /* Was made because of the scroll bar */
-    width: 73.5px;
 }
