scroll bar is not fixed but rest of the frontend is perfect

--- a/frontend/src/css/Table.css
+++ b/frontend/src/css/Table.css
@@ -7,12 +7,12 @@
     -ms-transform: translate(-50%, -50%);
 }
 
-table{
+#d-table{
     border: 1px solid black;
     border-collapse: collapse;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     table-layout: fixed;
-    width: 1562px;
+    /* width: 1562px; */
 }
 
 #table-body {
@@ -21,11 +21,11 @@ table{
     max-height: 400px;
     display: block;
     text-align: left;
-    width: 1562px;
+    /* width: 1562px; */
 }
 
 #table-header-row {
-    width: 1560px;
+    /* width: 1560px; */
     display: block;
     border: solid black 1px;
 }
