--- a/frontend/src/css/Table.css
+++ b/frontend/src/css/Table.css
@@ -12,6 +12,7 @@
     border-collapse: collapse;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     table-layout: fixed;
+    background-color: aquamarine;
     /* width: 1562px; */
 }
 
