--- a/frontend/src/css/Table.css
+++ b/frontend/src/css/Table.css
@@ -1,19 +1,14 @@
-#table{
+#d-table{
     position: absolute;
-    max-height: 400px;
     top: 50%;
     left: 50%;
     transform: translate( -50%, -50%);
     -ms-transform: translate(-50%, -50%);
-}
-
-#d-table{
     border: 1px solid black;
     border-collapse: collapse;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     table-layout: fixed;
     background-color: aquamarine;
-    /* width: 1562px; */
 }
 
 #table-body {
@@ -22,11 +17,10 @@
     max-height: 400px;
     display: block;
     text-align: left;
-    /* width: 1562px; */
 }
 
 #table-header-row {
-    /* width: 1560px; */
+    overflow-x: hidden;
     display: block;
     border: solid black 1px;
 }
