--- a/frontend/src/css/Searches.css
+++ b/frontend/src/css/Searches.css
@@ -1,9 +1,9 @@
 .search-button {
-    width: 80px;
-    height: 40px;
+    width: 6vw;
+    height: 4.7vh;
 }
 
 .search-avg-button {
-    width: 100px;
-    height: 40px;
+    width: 6.5vw;
+    height: 4.7vh;
 }
