--- a/frontend/src/css/Category.css
+++ b/frontend/src/css/Category.css
@@ -1,13 +1,13 @@
 .dropdown-check-list {
     display: inline-block;
-    width: 240px;
+    width: 104%;
 }
   
 .dropdown-check-list .anchor {
     position: relative;
     cursor: pointer;
     display: inline-block;
-    padding: 10px 62.5px 10px 62.5px;
+    padding: 0.75em 3.91em;
     border: 1px solid #ccc;
 }
   
@@ -16,9 +16,9 @@
     content: "";
     border-left: 2px solid black;
     border-top: 2px solid black;
-    padding: 5px;
-    right: 10px;
-    top: 20%;
+    padding: 0.35em;
+    right: 0.7em;
+    top: 25%;
     -moz-transform: rotate(-135deg);
     -ms-transform: rotate(-135deg);
     -o-transform: rotate(-135deg);
@@ -32,7 +32,7 @@
 }
   
 .dropdown-check-list ul.items {
-    padding: 2px;
+    padding: 1%;
     display: none;
     margin: 0;
     border: 1px solid #ccc;
