--- a/frontend/src/css/SpecificSearches.css
+++ b/frontend/src/css/SpecificSearches.css
@@ -1,9 +1,9 @@
 .button {
-    height: 40px;
-    width: 40px;
+    height: 4.1vh;
+    width: 2.5vw;
 }
 
 .specific-bar {
-    width: 160px;
-    height: 34px;
+    width: 9vw;
+    height: 3.6vh;
 }
