--- a/frontend/src/css/SpecificSearches.css
+++ b/frontend/src/css/SpecificSearches.css
@@ -1,9 +1,9 @@
 .button {
-    height: 4.1vh;
-    width: 2.5vw;
+    height: 3.3em;
+    width: 4em;
 }
 
 .specific-bar {
-    width: 9vw;
-    height: 3.6vh;
+    height: 3em;
+    width: 12em;
 }
