--- a/frontend/src/css/Category.css
+++ b/frontend/src/css/Category.css
@@ -1,6 +1,7 @@
 .dropdown-check-list {
     display: inline-block;
-    width: 104%;
+    width: 100%;
+    
 }
   
 .dropdown-check-list .anchor {
@@ -9,6 +10,7 @@
     display: inline-block;
     padding: 0.75em 3.91em;
     border: 1px solid #ccc;
+    
 }
   
 .dropdown-check-list .anchor:after {
@@ -17,7 +19,7 @@
     border-left: 2px solid black;
     border-top: 2px solid black;
     padding: 0.35em;
-    right: 0.7em;
+    right: .7vw;
     top: 25%;
     -moz-transform: rotate(-135deg);
     -ms-transform: rotate(-135deg);
