--- a/frontend/src/css/Table.css
+++ b/frontend/src/css/Table.css
@@ -14,7 +14,7 @@
 #table-body {
     overflow-y: auto;
     overflow-x: hidden;
-    max-height: 400px;
+    max-height: 35rem;
     display: block;
     text-align: left;
 }
